# degenforge

./: .gitignore  CHANGELOG.md  DEPLOYMENT_UPDATE_2025-11-17.md  FRONTEND_SETUP.md  NEXT_STEPS.md  PLAN.md  README.md  package-lock.json  tokens.md
Mobile/: .env.example  .gitignore  BUILD.md  README.md  app.json  canister-ids.config.ts  eas.json  metro.config.js  package-lock.json  package.json
Mobile/app/: +not-found.tsx  _layout.tsx  index.tsx  modal.tsx
Mobile/app/(tabs)/: _layout.tsx  explore.tsx  (+1 more)
Mobile/components/: AnimatedSplashScreen.tsx
Mobile/constants/: designTokens.ts  modernDesignTokens.ts  walletConfig.ts
Mobile/contexts/: AuthContext.tsx  ThemeContext.tsx  WalletProvider.tsx
Mobile/navigation/: AppNavigator.tsx
Mobile/screens/: ActivityScreen.tsx  BiometricPromptScreen.tsx  BridgeScreen.tsx  HomeScreen.tsx  MintScreen.tsx  OnboardingScreen.tsx  PoolDetailScreen.tsx  ProfileScreen.tsx  SendScreen.tsx  SignUpScreen.tsx  SplashScreen.tsx  SwapScreen.tsx  WalletConnectScreen.tsx  WalletRecoveryScreen.tsx
Mobile/services/: EthereumWalletService.ts  ICPBridgeService.ts  TransactionMonitorService.ts
Mobile/utils/: addressFormatter.ts  appKitConfig.ts  biometric.ts  icpAgent.ts  logger.ts  transactionStore.ts  walletConnect.ts
SOLEZO_contract/: hardhat.config.ts  package.json  pnpm-lock.yaml
SOLEZO_contract/contracts/: MezoBridge.sol
SOLEZO_contract/scripts/: deploy.ts
backend/: .env.example  .gitignore  INTEGRATION_COMPLETE.md  README.md  package.json  start-server.js  test-setup.js  tsconfig.json
backend/src/: index.ts
endpoints/: api.txt
icp_bridge/: .gitignore  CONFIGURE_BRIDGE.md  Cargo.toml  DASHBOARD_EXACT_STEPS.md  DEBUG_ISSUES.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  DEPLOY_FIX.md  DEPLOY_NOW.md  DEPLOY_VIA_DASHBOARD.md  DEPOSIT_BTC_INSTRUCTIONS.md  FINAL_DEPLOYMENT_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  SIMPLE_DEPLOY.md  WORKFLOW_GUIDE.md  call-deposit.sh  call_deposit.py  configure-bridge-canister.sh  deploy-and-configure.sh  deploy-canisters.sh  deploy-direct.sh  deploy-fix.sh  deploy-local.sh  deploy-mainnet.sh  deploy-production.sh  deploy-solana-canister.sh  deploy-via-dfx.sh  deploy_with_python.py  deposit-btc-fixed.sh  deposit-btc.sh  deposit_via_python.py  dfx.json  env.example  requirements.txt  setup-stable-canisters.sh  setup.sh  test-deposit-fixed.sh  test-deposit-with-address.sh  (+2 more)
icp_bridge/src/bridge_canister/: Cargo.toml  bridge.did  main.py
icp_bridge/src/bridge_canister/src/: lib.rs
icp_bridge/src/btc_canister/: Cargo.toml  btc_handler.did  main.py
icp_bridge/src/btc_canister/src/: bitcoin_address.rs  lib.rs
icp_bridge/src/solana_canister/: Cargo.toml  main.py  solana_rpc.did
icp_bridge/src/solana_canister/src/: lib.rs
icp_bridge/tests/: integration_test.rs
mezo-solana-hackathon/: bridge-listener.ts  package.json  pnpm-lock.yaml  wMUSD-mint-authority.json
musd/: README.md
musd/solidity/: README.md
tests/: package.json  pnpm-lock.yaml  test-protocol.ts
(+51 files in other folders)
