[package]
name = "btc_handler_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = "0.5"
bincode = "1.3"
# bitcoin = { version = "0.30", default-features = false, features = ["no-std"] }
# Temporarily disabled due to wasm32 compatibility issues with secp256k1-sys
