[package]
name = "solana_handler_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bs58 = "0.5"
bincode = "1.3"
hex = "0.4"
serde_json = "1.0"
sha2 = "0.10"
