[package]
name = "solana_handler_backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-timers = "0.9"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
bs58 = "0.5"
bincode = "1.3"
hex = "0.4"
serde_json = "1.0"
sha2 = "0.10"
rand = "0.8"
sol_rpc_client = "0.3"
sol_rpc_types = "0.3"
solana_message = "1.18"
solana_transaction = "1.18"
solana_signature = "1.18"
solana_program = "1.18"
getrandom = { version = "0.2", features = ["custom"] }
